# c_gtest_template

./: CMakeLists.txt  README.md
src/: Arithmetics.c  Arithmetics.h  Example.c  Example.h
test/: CMakeLists.txt  Test1.cc  TestArithmetics.cc
